Bot: Aggiungo: en, eo, fr, hu, it, ja, mk, nap, nl, pl, pt, ru, uk, vi, vo

--- a/Melizzano.mw
+++ b/Melizzano.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Campania]]
 [[Category:Comune d'a provinge de Benevento]]
 {{Provinge de Benevento}}
+
+[[en:Melizzano]]
+[[eo:Melizzano]]
+[[fr:Melizzano]]
+[[hu:Melizzano]]
+[[it:Melizzano]]
+[[ja:メリッツァーノ]]
+[[mk:Мелицано]]
+[[nap:Melizzano]]
+[[nl:Melizzano]]
+[[pl:Melizzano]]
+[[pt:Melizzano]]
+[[ru:Мелиццано]]
+[[uk:Меліццано]]
+[[vi:Melizzano]]
+[[vo:Melizzano]]
