Bot: Aggiungo: br, de, en, eo, fr, it, ja, la, nap, nl, pl, pt, rm, ru, uk, vo

--- a/Menaggio.mw
+++ b/Menaggio.mw
@@ -1,3 +1,20 @@
 {{S}}
 '''Menaggio''' éte 'nu comune [[Italie|tagliáne]] de 3.129 crestiáne.
 [[Category:Gëografije]]
+
+[[br:Menaggio]]
+[[de:Menaggio]]
+[[en:Menaggio]]
+[[eo:Menaggio]]
+[[fr:Menaggio]]
+[[it:Menaggio]]
+[[ja:メナッジョ]]
+[[la:Minucius]]
+[[nap:Menaggio]]
+[[nl:Menaggio]]
+[[pl:Menaggio]]
+[[pt:Menaggio]]
+[[rm:Menaggio]]
+[[ru:Менаджо]]
+[[uk:Менаджо]]
+[[vo:Menaggio]]
