Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Menconico.mw
+++ b/Menconico.mw
@@ -1,3 +1,17 @@
 {{S}}
 '''Menconico''' éte 'nu comune [[Italie|tagliáne]] de 494 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Menconico]]
+[[eo:Menconico]]
+[[fr:Menconico]]
+[[it:Menconico]]
+[[ja:メンコーニコ]]
+[[nap:Menconico]]
+[[nl:Menconico]]
+[[pl:Menconico]]
+[[pms:Menconico]]
+[[pt:Menconico]]
+[[uk:Менконіко]]
+[[vi:Menconico]]
+[[vo:Menconico]]
