Bot: Aggiungo: en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Menarola.mw
+++ b/Menarola.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Menarola''' éte 'nu comune [[Italie|tagliáne]] de 43 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Menarola]]
+[[eo:Menarola]]
+[[fr:Menarola]]
+[[id:Menarola]]
+[[it:Menarola]]
+[[ja:メナローラ]]
+[[nap:Menarola]]
+[[nl:Menarola]]
+[[pl:Menarola]]
+[[pms:Menarola]]
+[[pt:Menarola]]
+[[uk:Менарола]]
+[[vi:Menarola]]
+[[vo:Menarola]]
