Bot: Aggiungo: de, en, eo, fr, it, ja, lij, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Mendatica.mw
+++ b/Mendatica.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Liguria]]
 [[Category:Comune d'a provinge de Imperia]]
 {{Provinge de Imperia}}
+
+[[de:Mendatica]]
+[[en:Mendatica]]
+[[eo:Mendatica]]
+[[fr:Mendatica]]
+[[it:Mendatica]]
+[[ja:メンダーティカ]]
+[[lij:Mendaiga]]
+[[nap:Mendatica]]
+[[nl:Mendatica]]
+[[pl:Mendatica]]
+[[pms:Mendatica]]
+[[pt:Mendatica]]
+[[uk:Мендатіка]]
+[[vi:Mendatica]]
+[[vo:Mendatica]]
