Bot: Aggiungo: de, en, eo, fr, hu, it, ja, nap, nl, pl, pt, ru, scn, uk, vo

--- a/Mendicino.mw
+++ b/Mendicino.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Calavrie]]
 [[Category:Comune d'a provinge de Cosenza]]
 {{Provinge de Cosenza}}
+
+[[de:Mendicino]]
+[[en:Mendicino]]
+[[eo:Mendicino]]
+[[fr:Mendicino]]
+[[hu:Mendicino]]
+[[it:Mendicino]]
+[[ja:メンディチーノ]]
+[[nap:Mendicino]]
+[[nl:Mendicino]]
+[[pl:Mendicino]]
+[[pt:Mendicino]]
+[[ru:Мендичино]]
+[[scn:Minnicinu (CS)]]
+[[uk:Мендічино]]
+[[vo:Mendicino]]
