Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vo

--- a/Merana.mw
+++ b/Merana.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Merana''' éte 'nu comune [[Italie|tagliáne]] de 182 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Merana]]
+[[en:Merana]]
+[[eo:Merana]]
+[[fr:Merana]]
+[[id:Merana]]
+[[it:Merana]]
+[[ja:メラーナ]]
+[[nap:Merana]]
+[[nl:Merana]]
+[[pl:Merana]]
+[[pms:Meiran-a]]
+[[pt:Merana]]
+[[uk:Мерана]]
+[[vo:Merana]]
