Bot: Aggiungo: de, en, eo, fr, it, ja, nap, nl, pl, pms, pt, ru, uk, vo

--- a/Merate.mw
+++ b/Merate.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Merate''' éte 'nu comune [[Italie|tagliáne]] de 14.359 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Merate]]
+[[en:Merate]]
+[[eo:Merate]]
+[[fr:Merate]]
+[[it:Merate]]
+[[ja:メラーテ]]
+[[nap:Merate]]
+[[nl:Merate]]
+[[pl:Merate]]
+[[pms:Merate]]
+[[pt:Merate]]
+[[ru:Мерате]]
+[[uk:Мерате]]
+[[vo:Merate]]
