Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pt, uk, vec, vi, vo

--- a/Mercatino_Conca.mw
+++ b/Mercatino_Conca.mw
@@ -4,3 +4,17 @@
 [[Category:Comune de le Marche]]
 [[Category:Comune d'a provinge de Pesaro e Urbino]]
 {{Provinge de Pesaro e Urbino}}
+
+[[en:Mercatino Conca]]
+[[eo:Mercatino Conca]]
+[[fr:Mercatino Conca]]
+[[it:Mercatino Conca]]
+[[ja:メルカティーノ・コンカ]]
+[[nap:Mercatino Conca]]
+[[nl:Mercatino Conca]]
+[[pl:Mercatino Conca]]
+[[pt:Mercatino Conca]]
+[[uk:Меркатіно-Конка]]
+[[vec:Mercatino Conca]]
+[[vi:Mercatino Conca]]
+[[vo:Mercatino Conca]]
