Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pt, uk, vec, vi, vo

--- a/Mercatello_sus_a_'u_Metauro.mw
+++ b/Mercatello_sus_a_'u_Metauro.mw
@@ -4,3 +4,17 @@
 [[Category:Comune de le Marche]]
 [[Category:Comune d'a provinge de Pesaro e Urbino]]
 {{Provinge de Pesaro e Urbino}}
+
+[[en:Mercatello sul Metauro]]
+[[eo:Mercatello sul Metauro]]
+[[fr:Mercatello sul Metauro]]
+[[it:Mercatello sul Metauro]]
+[[ja:メルカテッロ・スル・メタウロ]]
+[[nap:Mercatello sul Metauro]]
+[[nl:Mercatello sul Metauro]]
+[[pl:Mercatello sul Metauro]]
+[[pt:Mercatello sul Metauro]]
+[[uk:Меркателло-суль-Метауро]]
+[[vec:Mercatello sul Metauro]]
+[[vi:Mercatello sul Metauro]]
+[[vo:Mercatello sul Metauro]]
