Bot: Aggiungo: eml, en, eo, fr, it, ja, nap, nl, pl, pms, pt, uk, vec, vi, vo, zh

--- a/Mercato_Saraceno.mw
+++ b/Mercato_Saraceno.mw
@@ -1,3 +1,20 @@
 {{S}}
 '''Mercato Saraceno''' éte 'nu comune [[Italie|tagliáne]] de 6.569 crestiáne.
 [[Category:Gëografije]]
+
+[[eml:E Marchè]]
+[[en:Mercato Saraceno]]
+[[eo:Mercato Saraceno]]
+[[fr:Mercato Saraceno]]
+[[it:Mercato Saraceno]]
+[[ja:メルカート・サラチェーノ]]
+[[nap:Mercato Saraceno]]
+[[nl:Mercato Saraceno]]
+[[pl:Mercato Saraceno]]
+[[pms:Mercato Saraceno]]
+[[pt:Mercato Saraceno]]
+[[uk:Меркато-Сарачено]]
+[[vec:Mercato Saraceno]]
+[[vi:Mercato Saraceno]]
+[[vo:Mercato Saraceno]]
+[[zh:萨拉切诺镇]]
