Bot: Aggiungo: ca, en, eo, fr, fur, it, ja, nap, nl, pl, pt, uk, vi, vo

--- a/Mereto_di_Tomba.mw
+++ b/Mereto_di_Tomba.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Mereto di Tomba''' éte 'nu comune [[Italie|tagliáne]] de 2.717 crestiáne.
 [[Category:Gëografije]]
+
+[[ca:Mereto di Tomba]]
+[[en:Mereto di Tomba]]
+[[eo:Mereto di Tomba]]
+[[fr:Mereto di Tomba]]
+[[fur:Merêt di Tombe]]
+[[it:Mereto di Tomba]]
+[[ja:メレート・ディ・トンバ]]
+[[nap:Mereto di Tomba]]
+[[nl:Mereto di Tomba]]
+[[pl:Mereto di Tomba]]
+[[pt:Mereto di Tomba]]
+[[uk:Мерето-ді-Томба]]
+[[vi:Mereto di Tomba]]
+[[vo:Mereto di Tomba]]
