Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Mergo.mw
+++ b/Mergo.mw
@@ -4,3 +4,17 @@
 [[Category:Comune de le Marche]]
 [[Category:Comune d'a provinge de Angone]]
 {{Provinge de Angone}}
+
+[[en:Mergo]]
+[[eo:Mergo]]
+[[fr:Mergo]]
+[[it:Mergo]]
+[[ja:メルゴ]]
+[[nap:Mergo]]
+[[nl:Mergo]]
+[[pl:Mergo]]
+[[pms:Mergo]]
+[[pt:Mergo]]
+[[uk:Мерго]]
+[[vi:Mergo]]
+[[vo:Mergo]]
