Bot: Aggiungo: de, en, eo, fr, it, ja, nap, nl, pl, pt, ru, uk, vec, vi, vo

--- a/Merlara.mw
+++ b/Merlara.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Merlara''' éte 'nu comune [[Italie|tagliáne]] de 2.960 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Merlara]]
+[[en:Merlara]]
+[[eo:Merlara]]
+[[fr:Merlara]]
+[[it:Merlara]]
+[[ja:メルラーラ]]
+[[nap:Merlara]]
+[[nl:Merlara]]
+[[pl:Merlara]]
+[[pt:Merlara]]
+[[ru:Мерлара]]
+[[uk:Мерлара]]
+[[vec:Merlara]]
+[[vi:Merlara]]
+[[vo:Merlara]]
