Bot: Aggiungo: en, eo, fr, it, ja, lmo, nap, nl, pl, pt, rm, ru, uk, vi, vo

--- a/Merone.mw
+++ b/Merone.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Merone''' éte 'nu comune [[Italie|tagliáne]] de 3.597 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Merone]]
+[[eo:Merone]]
+[[fr:Merone]]
+[[it:Merone]]
+[[ja:メローネ]]
+[[lmo:Meròn]]
+[[nap:Merone]]
+[[nl:Merone]]
+[[pl:Merone]]
+[[pt:Merone]]
+[[rm:Merone]]
+[[ru:Мероне]]
+[[uk:Мероне]]
+[[vi:Merone]]
+[[vo:Merone]]
