Bot: Aggiungo: de, eml, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, ru, uk, vec, vi, vo

--- a/Mesola.mw
+++ b/Mesola.mw
@@ -1,3 +1,22 @@
 {{S}}
 '''Mesola''' éte 'nu comune [[Italie|tagliáne]] de 7.331 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Mesola]]
+[[eml:La Mésula]]
+[[en:Mesola]]
+[[eo:Mesola]]
+[[fr:Mesola]]
+[[id:Mesola]]
+[[it:Mesola]]
+[[ja:メゾーラ]]
+[[nap:Mesola]]
+[[nl:Mesola]]
+[[pl:Mesola]]
+[[pms:Mesola]]
+[[pt:Mesola]]
+[[ru:Мезола]]
+[[uk:Мезола]]
+[[vec:Mesola]]
+[[vi:Mesola]]
+[[vo:Mesola]]
