Bot: Aggiungo: en, eo, fr, hu, it, ja, nap, nl, pl, pms, pt, ru, scn, uk, vo

--- a/Mesoraca.mw
+++ b/Mesoraca.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Calavrie]]
 [[Category:Comune d'a provinge de Crotone]]
 {{Provinge de Crotone}}
+
+[[en:Mesoraca]]
+[[eo:Mesoraca]]
+[[fr:Mesoraca]]
+[[hu:Mesoraca]]
+[[it:Mesoraca]]
+[[ja:メゾラーカ]]
+[[nap:Mesoraca]]
+[[nl:Mesoraca]]
+[[pl:Mesoraca]]
+[[pms:Mesoraca]]
+[[pt:Mesoraca]]
+[[ru:Мезорака]]
+[[scn:Misuraca (KR)]]
+[[uk:Мезорака]]
+[[vo:Mesoraca]]
