Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pt, ru, uk, vec, vi, vo

--- a/Mestrino.mw
+++ b/Mestrino.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Mestrino''' éte 'nu comune [[Italie|tagliáne]] de 9541 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Mestrino]]
+[[eo:Mestrino]]
+[[fr:Mestrino]]
+[[it:Mestrino]]
+[[ja:メストリーノ]]
+[[nap:Mestrino]]
+[[nl:Mestrino]]
+[[pl:Mestrino]]
+[[pt:Mestrino]]
+[[ru:Местрино]]
+[[uk:Местрино]]
+[[vec:Mestrin]]
+[[vi:Mestrino]]
+[[vo:Mestrino]]
