Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Meugliano.mw
+++ b/Meugliano.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Meugliano''' éte 'nu comune [[Italie|tagliáne]] de 109 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Meugliano]]
+[[en:Meugliano]]
+[[eo:Meugliano]]
+[[fr:Meugliano]]
+[[id:Meugliano]]
+[[it:Meugliano]]
+[[ja:メウリアーノ]]
+[[nap:Meugliano]]
+[[nl:Meugliano]]
+[[pl:Meugliano]]
+[[pms:Mulian]]
+[[pt:Meugliano]]
+[[uk:Меульяно]]
+[[vi:Meugliano]]
+[[vo:Meugliano]]
