Bot: Aggiungo: de, en, eo, fr, id, it, ja, ms, nap, nl, pl, pt, ru, uk, vi, vo

--- a/Mezzago.mw
+++ b/Mezzago.mw
@@ -1,3 +1,20 @@
 {{S}}
 '''Mezzago''' éte 'nu comune [[Italie|tagliáne]] de 3.626 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Mezzago]]
+[[en:Mezzago]]
+[[eo:Mezzago]]
+[[fr:Mezzago]]
+[[id:Mezzago]]
+[[it:Mezzago]]
+[[ja:メッツァーゴ]]
+[[ms:Mezzago]]
+[[nap:Mezzago]]
+[[nl:Mezzago]]
+[[pl:Mezzago]]
+[[pt:Mezzago]]
+[[ru:Меццаго]]
+[[uk:Меццаго]]
+[[vi:Mezzago]]
+[[vo:Mezzago]]
