Bot: Aggiungo: de, en, eo, fr, it, ja, lij, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Mezzanego.mw
+++ b/Mezzanego.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Liguria]]
 [[Category:Comune d'a provinge de Genova]]
 {{Provinge de Genova}}
+
+[[de:Mezzanego]]
+[[en:Mezzanego]]
+[[eo:Mezzanego]]
+[[fr:Mezzanego]]
+[[it:Mezzanego]]
+[[ja:メッツァーネゴ]]
+[[lij:Mezànego]]
+[[nap:Mezzanego]]
+[[nl:Mezzanego]]
+[[pl:Mezzanego]]
+[[pms:Mezzanego]]
+[[pt:Mezzanego]]
+[[uk:Меццанего]]
+[[vi:Mezzanego]]
+[[vo:Mezzanego]]
