Bot: Aggiungo: en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Mezzana_Rabattone.mw
+++ b/Mezzana_Rabattone.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Mezzana Rabattone''' éte 'nu comune [[Italie|tagliáne]] de 532 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Mezzana Rabattone]]
+[[eo:Mezzana Rabattone]]
+[[fr:Mezzana Rabattone]]
+[[id:Mezzana Rabattone]]
+[[it:Mezzana Rabattone]]
+[[ja:メッツァーナ・ラバットーネ]]
+[[nap:Mezzana Rabattone]]
+[[nl:Mezzana Rabattone]]
+[[pl:Mezzana Rabattone]]
+[[pms:Mezzana Rabattone]]
+[[pt:Mezzana Rabattone]]
+[[uk:Меццана-Рабаттоне]]
+[[vi:Mezzana Rabattone]]
+[[vo:Mezzana Rabattone]]
