Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Mezzana_Mortigliengo.mw
+++ b/Mezzana_Mortigliengo.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Mezzana Mortigliengo''' éte 'nu comune [[Italie|tagliáne]] de 647 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Mezzana Mortigliengo]]
+[[en:Mezzana Mortigliengo]]
+[[eo:Mezzana Mortigliengo]]
+[[fr:Mezzana Mortigliengo]]
+[[id:Mezzana Mortigliengo]]
+[[it:Mezzana Mortigliengo]]
+[[ja:メッツァーナ・モルティリエンゴ]]
+[[nap:Mezzana Mortigliengo]]
+[[nl:Mezzana Mortigliengo]]
+[[pl:Mezzana Mortigliengo]]
+[[pms:Mzan-a Mortiengh]]
+[[pt:Mezzana Mortigliengo]]
+[[uk:Меццана-Мортільєнго]]
+[[vi:Mezzana Mortigliengo]]
+[[vo:Mezzana Mortigliengo]]
