Bot: Aggiungo: en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Mezzana_Bigli.mw
+++ b/Mezzana_Bigli.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Mezzana Bigli''' éte 'nu comune [[Italie|tagliáne]] de 1.166 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Mezzana Bigli]]
+[[eo:Mezzana Bigli]]
+[[fr:Mezzana Bigli]]
+[[id:Mezzana Bigli]]
+[[it:Mezzana Bigli]]
+[[ja:メッツァーナ・ビーリ]]
+[[nap:Mezzana Bigli]]
+[[nl:Mezzana Bigli]]
+[[pl:Mezzana Bigli]]
+[[pms:Mezzana Bigli]]
+[[pt:Mezzana Bigli]]
+[[uk:Меццана-Більї]]
+[[vi:Mezzana Bigli]]
+[[vo:Mezzana Bigli]]
