Bot: Aggiungo: de, eml, en, eo, es, fr, it, ja, nap, nl, pl, pt, ru, uk, vi, vo

--- a/Mezzani.mw
+++ b/Mezzani.mw
@@ -1,3 +1,20 @@
 {{S}}
 '''Mezzani''' éte 'nu comune [[Italie|tagliáne]] de 2.897 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Mezzani]]
+[[eml:Mzàn]]
+[[en:Mezzani]]
+[[eo:Mezzani]]
+[[es:Mezzani]]
+[[fr:Mezzani]]
+[[it:Mezzani]]
+[[ja:メッツァーニ]]
+[[nap:Mezzani]]
+[[nl:Mezzani]]
+[[pl:Mezzani]]
+[[pt:Mezzani]]
+[[ru:Меццани]]
+[[uk:Меццані]]
+[[vi:Mezzani]]
+[[vo:Mezzani]]
