Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Mezzomerico.mw
+++ b/Mezzomerico.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Mezzomerico''' éte 'nu comune [[Italie|tagliáne]] de 950 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Mezzomerico]]
+[[en:Mezzomerico]]
+[[eo:Mezzomerico]]
+[[fr:Mezzomerico]]
+[[id:Mezzomerico]]
+[[it:Mezzomerico]]
+[[ja:メッツォメリーコ]]
+[[nap:Mezzomerico]]
+[[nl:Mezzomerico]]
+[[pl:Mezzomerico]]
+[[pms:Mesmerich]]
+[[pt:Mezzomerico]]
+[[uk:Меццомерико]]
+[[vi:Mezzomerico]]
+[[vo:Mezzomerico]]
