Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, ru, uk, vi, vo

--- a/Mezzolombardo.mw
+++ b/Mezzolombardo.mw
@@ -4,3 +4,20 @@
 [[Category:Comune d'u Trendine Alto Adige]]
 [[Category:Comune d'a provinge de Trende]]
 {{Provinge de Trende}}
+
+[[de:Mezzolombardo]]
+[[en:Mezzolombardo]]
+[[eo:Mezzolombardo]]
+[[fr:Mezzolombardo]]
+[[id:Mezzolombardo]]
+[[it:Mezzolombardo]]
+[[ja:メッツォロンバルド]]
+[[nap:Mezzolombardo]]
+[[nl:Mezzolombardo]]
+[[pl:Mezzolombardo]]
+[[pms:Mezzolombardo]]
+[[pt:Mezzolombardo]]
+[[ru:Меццоломбардо]]
+[[uk:Меццоломбардо]]
+[[vi:Mezzolombardo]]
+[[vo:Mezzolombardo]]
