Bot: Aggiungo: de, en, eo, fr, it, ja, nap, nl, pl, pt, uk, vi, vo

--- a/Mezzoldo.mw
+++ b/Mezzoldo.mw
@@ -1,3 +1,17 @@
 {{S}}
 '''Mezzoldo''' éte 'nu comune [[Italie|tagliáne]] de 222 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Mezzoldo]]
+[[en:Mezzoldo]]
+[[eo:Mezzoldo]]
+[[fr:Mezzoldo]]
+[[it:Mezzoldo]]
+[[ja:メッツォルド]]
+[[nap:Mezzoldo]]
+[[nl:Mezzoldo]]
+[[pl:Mezzoldo]]
+[[pt:Mezzoldo]]
+[[uk:Меццольдо]]
+[[vi:Misano di Gera d'Adda]]
+[[vo:Mezzoldo]]
