Bot: Aggiungo: ca, de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, ru, uk, vo

--- a/Mezzocorona.mw
+++ b/Mezzocorona.mw
@@ -4,3 +4,20 @@
 [[Category:Comune d'u Trendine Alto Adige]]
 [[Category:Comune d'a provinge de Trende]]
 {{Provinge de Trende}}
+
+[[ca:Mezzocorona]]
+[[de:Mezzocorona]]
+[[en:Mezzocorona]]
+[[eo:Mezzocorona]]
+[[fr:Mezzocorona]]
+[[id:Mezzocorona]]
+[[it:Mezzocorona]]
+[[ja:メッツォコローナ]]
+[[nap:Mezzocorona]]
+[[nl:Mezzocorona]]
+[[pl:Mezzocorona]]
+[[pms:Mezzocorona]]
+[[pt:Mezzocorona]]
+[[ru:Меццокорона]]
+[[uk:Меццокорона]]
+[[vo:Mezzocorona]]
