Bot: Aggiungo: ca, de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Mezzenile.mw
+++ b/Mezzenile.mw
@@ -1,3 +1,20 @@
 {{S}}
 '''Mezzenile''' éte 'nu comune [[Italie|tagliáne]] de 900 crestiáne.
 [[Category:Gëografije]]
+
+[[ca:Mezzenile]]
+[[de:Mezzenile]]
+[[en:Mezzenile]]
+[[eo:Mezzenile]]
+[[fr:Mezzenile]]
+[[id:Mezzenile]]
+[[it:Mezzenile]]
+[[ja:メッツェニーレ]]
+[[nap:Mezzenile]]
+[[nl:Mezzenile]]
+[[pl:Mezzenile]]
+[[pms:Mesnil]]
+[[pt:Mezzenile]]
+[[uk:Мецценіле]]
+[[vi:Mezzenile]]
+[[vo:Mezzenile]]
