Bot: Aggiungo: en, eo, fi, fr, id, it, ja, nap, nl, pl, pms, pt, ru, scn, uk, vec, vi, vo

--- a/Mezzano.mw
+++ b/Mezzano.mw
@@ -4,3 +4,22 @@
 [[Category:Comune d'u Trendine Alto Adige]]
 [[Category:Comune d'a provinge de Trende]]
 {{Provinge de Trende}}
+
+[[en:Mezzano]]
+[[eo:Mezzano]]
+[[fi:Mezzano]]
+[[fr:Mezzano]]
+[[id:Mezzano]]
+[[it:Mezzano]]
+[[ja:メッツァーノ]]
+[[nap:Mezzano]]
+[[nl:Mezzano]]
+[[pl:Mezzano]]
+[[pms:Mezzano]]
+[[pt:Mezzano]]
+[[ru:Меццано]]
+[[scn:Minzanu]]
+[[uk:Меццано]]
+[[vec:Mezan]]
+[[vi:Mezzano]]
+[[vo:Mezzano]]
