Bot: Aggiungo: de, en, eo, fr, it, ja, nap, nl, pl, pms, pt, ru, sc, scn, sq, sv, uk, vo

--- a/Mezzojuso.mw
+++ b/Mezzojuso.mw
@@ -4,3 +4,22 @@
 [[Category:Comune d'a Sicilia]]
 [[Category:Comune d'a provinge de Palermo]]
 {{Provinge de Palermo}}
+
+[[de:Mezzojuso]]
+[[en:Mezzojuso]]
+[[eo:Mezzojuso]]
+[[fr:Mezzojuso]]
+[[it:Mezzojuso]]
+[[ja:メッツォイウーゾ]]
+[[nap:Mezzojuso]]
+[[nl:Mezzojuso]]
+[[pl:Mezzojuso]]
+[[pms:Mezzojuso]]
+[[pt:Mezzojuso]]
+[[ru:Меццоюзо]]
+[[sc:Mezzojuso]]
+[[scn:Menzujusu (PA)]]
+[[sq:Mezzojuso]]
+[[sv:Mezzojuso]]
+[[uk:Меццоюзо]]
+[[vo:Mezzojuso]]
