Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Miagliano.mw
+++ b/Miagliano.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Miagliano''' éte 'nu comune [[Italie|tagliáne]] de 587 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Miagliano]]
+[[en:Miagliano]]
+[[eo:Miagliano]]
+[[fr:Miagliano]]
+[[id:Miagliano]]
+[[it:Miagliano]]
+[[ja:ミアリアーノ]]
+[[nap:Miagliano]]
+[[nl:Miagliano]]
+[[pl:Miagliano]]
+[[pms:Miajan]]
+[[pt:Miagliano]]
+[[uk:М'яльяно]]
+[[vi:Miagliano]]
+[[vo:Miagliano]]
