Bot: Aggiungo: de, en, eo, fr, it, ja, nap, nl, pl, pt, ru, uk, vec, vi, vo

--- a/Miane.mw
+++ b/Miane.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Miane''' éte 'nu comune [[Italie|tagliáne]] de 3.637 <small>(2005)</small> crestiáne.
 [[Category:Gëografije]]
+
+[[de:Miane]]
+[[en:Miane]]
+[[eo:Miane]]
+[[fr:Miane]]
+[[it:Miane]]
+[[ja:ミアーネ]]
+[[nap:Miane]]
+[[nl:Miane]]
+[[pl:Miane]]
+[[pt:Miane]]
+[[ru:Мьяне]]
+[[uk:М'яне]]
+[[vec:Miàne]]
+[[vi:Miane]]
+[[vo:Miane]]
