--- a/Miasino.mw
+++ b/Miasino.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Miasino''' éte 'nu comune [[Italie|tagliáne]] de 953 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Miasino]]
+[[en:Miasino]]
+[[eo:Miasino]]
+[[fr:Miasino]]
+[[id:Miasino]]
+[[it:Miasino]]
+[[ja:ミアジーノ]]
+[[nap:Miasino]]
+[[nl:Miasino]]
+[[pl:Miasino]]
+[[pms:Miasin]]
+[[pt:Miasino]]
+[[uk:М'язіно]]
+[[vi:Miasino]]
+[[vo:Miasino]]
