Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pt, uk, vi, vo

--- a/Micigliano.mw
+++ b/Micigliano.mw
@@ -4,3 +4,16 @@
 [[Category:Comune d'u Lazie]]
 [[Category:Comune d'a provinge de Rieti]]
 {{Provinge de Rieti}}
+
+[[en:Micigliano]]
+[[eo:Micigliano]]
+[[fr:Micigliano]]
+[[it:Micigliano]]
+[[ja:ミチリアーノ]]
+[[nap:Micigliano]]
+[[nl:Micigliano]]
+[[pl:Micigliano]]
+[[pt:Micigliano]]
+[[uk:Мічильяно]]
+[[vi:Micigliano]]
+[[vo:Micigliano]]
