--- a/Aquileia.mw
+++ b/Aquileia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Aquileia''' éte 'nu comune [[Italie|tagliáne]] de 3.491 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
