--- a/Arta_Terme.mw
+++ b/Arta_Terme.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Arta Terme''' éte 'nu comune [[Italie|tagliáne]] de 2.356 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
