Bot: Aggiungo: en, eo, fr, hu, it, ja, nap, nl, pl, pt, roa-rup, scn, uk, vo

--- a/Miggiano.mw
+++ b/Miggiano.mw
@@ -4,3 +4,18 @@
 [[Category:Comune d'a Pugghie]]
 [[Category:Comune d'a provinge de Lecce]]
 {{Provinge de Lecce}}
+
+[[en:Miggiano]]
+[[eo:Miggiano]]
+[[fr:Miggiano]]
+[[hu:Miggiano]]
+[[it:Miggiano]]
+[[ja:ミッジャーノ]]
+[[nap:Miggiano]]
+[[nl:Miggiano]]
+[[pl:Miggiano]]
+[[pt:Miggiano]]
+[[roa-rup:Miggiano]]
+[[scn:Miscianu (LE)]]
+[[uk:Міджано]]
+[[vo:Miggiano]]
