--- a/Miglianico.mw
+++ b/Miglianico.mw
@@ -4,3 +4,21 @@
 [[Category:Comune de l'Abbruzze]]
 [[Category:Comune d'a provinge de Chieti]]
 {{Provinge de Chieti}}
+
+[[de:Miglianico]]
+[[en:Miglianico]]
+[[eo:Miglianico]]
+[[es:Miglianico]]
+[[fr:Miglianico]]
+[[hu:Miglianico]]
+[[it:Miglianico]]
+[[ja:ミリアーニコ]]
+[[jv:Miglianico]]
+[[nap:Miglianico]]
+[[nl:Miglianico]]
+[[pl:Miglianico]]
+[[pt:Miglianico]]
+[[roa-rup:Miglianico]]
+[[ru:Мильянико]]
+[[uk:Мільяніко]]
+[[vo:Miglianico]]
