Bot: Aggiungo: eml, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, ru, uk, vec, vi, vo

--- a/Migliaro.mw
+++ b/Migliaro.mw
@@ -1,3 +1,21 @@
 {{S}}
 '''Migliaro''' éte 'nu comune [[Italie|tagliáne]] de 2.289 crestiáne.
 [[Category:Gëografije]]
+
+[[eml:Miàr]]
+[[en:Migliaro]]
+[[eo:Migliaro]]
+[[fr:Migliaro]]
+[[id:Migliaro]]
+[[it:Migliaro]]
+[[ja:ミリアーロ]]
+[[nap:Migliaro]]
+[[nl:Migliaro]]
+[[pl:Migliaro]]
+[[pms:Migliaro]]
+[[pt:Migliaro]]
+[[ru:Мильяро]]
+[[uk:Мільяро]]
+[[vec:Migliaro]]
+[[vi:Migliaro]]
+[[vo:Migliaro]]
