Bot: Aggiungo: eml, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, ru, uk, vec, vi, vo

--- a/Migliarino.mw
+++ b/Migliarino.mw
@@ -1,3 +1,21 @@
 {{S}}
 '''Migliarino''' éte 'nu comune [[Italie|tagliáne]] de 3.672 crestiáne.
 [[Category:Gëografije]]
+
+[[eml:Miarìn]]
+[[en:Migliarino]]
+[[eo:Migliarino]]
+[[fr:Migliarino]]
+[[id:Migliarino]]
+[[it:Migliarino]]
+[[ja:ミリアリーノ]]
+[[nap:Migliarino]]
+[[nl:Migliarino]]
+[[pl:Migliarino]]
+[[pms:Migliarino]]
+[[pt:Migliarino]]
+[[ru:Мильярино]]
+[[uk:Мільярино]]
+[[vec:Migliarino]]
+[[vi:Migliarino]]
+[[vo:Migliarino]]
