Bot: Aggiungo: en, eo, fr, hu, it, ja, nap, nl, pl, pt, scn, uk, vo

--- a/Miglierina.mw
+++ b/Miglierina.mw
@@ -4,3 +4,17 @@
 [[Category:Comune d'a Calavrie]]
 [[Category:Comune d'a provinge de Catanzaro]]
 {{Provinge de Catanzaro}}
+
+[[en:Miglierina]]
+[[eo:Miglierina]]
+[[fr:Miglierina]]
+[[hu:Miglierina]]
+[[it:Miglierina]]
+[[ja:ミリエリーナ]]
+[[nap:Miglierina]]
+[[nl:Miglierina]]
+[[pl:Miglierina]]
+[[pt:Miglierina]]
+[[scn:Muglierina (CZ)]]
+[[uk:Мільєрина]]
+[[vo:Miglierina]]
