Bot: Aggiungo: de, en, eo, fr, hu, it, ja, nap, nl, pl, pt, ru, scn, uk, vo

--- a/Miglionico.mw
+++ b/Miglionico.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a provinge de Matera]]
 [[Category:Comune d'a Basilicata]]
 {{Provinge de Matera}}
+
+[[de:Miglionico]]
+[[en:Miglionico]]
+[[eo:Miglionico]]
+[[fr:Miglionico]]
+[[hu:Miglionico]]
+[[it:Miglionico]]
+[[ja:ミリオーニコ]]
+[[nap:Miglionico]]
+[[nl:Miglionico]]
+[[pl:Miglionico]]
+[[pt:Miglionico]]
+[[ru:Мильонико]]
+[[scn:Migliunicu]]
+[[uk:Мільйоніко]]
+[[vo:Miglionico]]
