Bot: Aggiungo: en, eo, fr, hu, it, ja, mk, nap, nl, pl, pms, pt, ru, scn, uk, vec, vi, vo

--- a/Mignano_Monde_Luènghe.mw
+++ b/Mignano_Monde_Luènghe.mw
@@ -4,3 +4,22 @@
 [[Category:Comune d'a Campania]]
 [[Category:Comune d'a provinge de Caserta]]
 {{Provinge de Caserta}}
+
+[[en:Mignano Monte Lungo]]
+[[eo:Mignano Monte Lungo]]
+[[fr:Mignano Monte Lungo]]
+[[hu:Mignano Monte Lungo]]
+[[it:Mignano Monte Lungo]]
+[[ja:ミニャーノ・モンテ・ルンゴ]]
+[[mk:Мињано Монте Лунго]]
+[[nap:Mignano Monte Lungo]]
+[[nl:Mignano Monte Lungo]]
+[[pl:Mignano Monte Lungo]]
+[[pms:Mignano Monte Lungo]]
+[[pt:Mignano Monte Lungo]]
+[[ru:Миньано-Монте-Лунго]]
+[[scn:Mignanu Munti Loncu]]
+[[uk:Міньяно-Монте-Лунго]]
+[[vec:Mignan Monte Łongo]]
+[[vi:Mignano Monte Lungo]]
+[[vo:Mignano Monte Lungo]]
