--- a/Basiliano_(UD).mw
+++ b/Basiliano_(UD).mw
@@ -1,5 +1,6 @@
 {{S}}
-'''Basiliano''' éte 'nu comune [[Italie|tagliáne]] de 5.002 crestiáne.
+'''Basiliano''' éte 'nu comune [[Itaglie|tagliáne]] de 5.002 crestiáne.
 
 [[Category:Comune d'u Friuli Venezia Giulia]]
 [[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
