*Empty MediaWiki Message*

--- a/Bertiolo.mw
+++ b/Bertiolo.mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Bertiolo''' éte 'nu comune [[Italie|tagliáne]] de 2.542 crestiáne.
-[[Category:Gëografije]]
+'''Bertiolo''' éte 'nu comune [[Itaglie|tagliáne]] de 2.542 crestiáne.
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
