Bot: Aggiungo: ca, de, en, eo, fr, he, id, it, ja, ka, la, nap, nl, pl, pms, pt, ru, scn, uk, vo

--- a/Milazzo.mw
+++ b/Milazzo.mw
@@ -4,3 +4,24 @@
 [[Category:Comune d'a Sicilia]]
 [[Category:Comune d'a provinge de Messina]]
 {{Provinge de Messina}}
+
+[[ca:Milazzo]]
+[[de:Milazzo]]
+[[en:Milazzo]]
+[[eo:Milazzo]]
+[[fr:Milazzo]]
+[[he:מילאצו]]
+[[id:Milazzo]]
+[[it:Milazzo]]
+[[ja:ミラッツォ]]
+[[ka:მილაცო]]
+[[la:Mylae]]
+[[nap:Milazzo]]
+[[nl:Milazzo]]
+[[pl:Milazzo]]
+[[pms:Milazzo]]
+[[pt:Milazzo]]
+[[ru:Милаццо]]
+[[scn:Milazzu (ME)]]
+[[uk:Мілаццо]]
+[[vo:Milazzo]]
