Bot: Aggiungo: br, de, en, eo, fr, it, ja, nap, nl, pl, pt, scn, uk, vi, vo

--- a/Militello_Rosmarino.mw
+++ b/Militello_Rosmarino.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Sicilia]]
 [[Category:Comune d'a provinge de Messina]]
 {{Provinge de Messina}}
+
+[[br:Militello Rosmarino]]
+[[de:Militello Rosmarino]]
+[[en:Militello Rosmarino]]
+[[eo:Militello Rosmarino]]
+[[fr:Militello Rosmarino]]
+[[it:Militello Rosmarino]]
+[[ja:ミリテッロ・ロズマリーノ]]
+[[nap:Militello Rosmarino]]
+[[nl:Militello Rosmarino]]
+[[pl:Militello Rosmarino]]
+[[pt:Militello Rosmarino]]
+[[scn:Militieddu (ME)]]
+[[uk:Мілітелло-Розмарино]]
+[[vi:Militello Rosmarino]]
+[[vo:Militello Rosmarino]]
