--- a/Militello_in_Val_de_Catania.mw
+++ b/Militello_in_Val_de_Catania.mw
@@ -7,3 +7,23 @@
 [[Category:Comune d'a Sicilia]]
 [[Category:Comune d'a provinge de Catania]]
 {{Provinge de Catania}}
+
+[[cs:Militello in Val di Catania]]
+[[de:Militello in Val di Catania]]
+[[en:Militello in Val di Catania]]
+[[eo:Militello in Val di Catania]]
+[[es:Militello in Val di Catania]]
+[[fi:Militello in Val di Catania]]
+[[fr:Militello in Val di Catania]]
+[[it:Militello in Val di Catania]]
+[[ja:ミリテッロ・イン・ヴァル・ディ・カターニア]]
+[[lmo:Militello in Val di Catania]]
+[[nap:Militello in Val di Catania]]
+[[nl:Militello in Val di Catania]]
+[[pl:Militello in Val di Catania]]
+[[pt:Militello in Val di Catania]]
+[[ru:Милителло-ин-Валь-ди-Катания]]
+[[scn:Militeddu (CT)]]
+[[uk:Мілітелло-ін-Валь-ді-Катанія]]
+[[vi:Militello in Val di Catania]]
+[[vo:Militello in Val di Catania]]
