--- a/Bordano.mw
+++ b/Bordano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bordano''' éte 'nu comune [[Italie|tagliáne]] de 795 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
