--- a/Buja.mw
+++ b/Buja.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Buja''' éte 'nu comune [[Italie|tagliáne]] de 6.741 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
