--- a/Buttrio.mw
+++ b/Buttrio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Buttrio''' éte 'nu comune [[Italie|tagliáne]] de 4.000 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
