--- a/Campoformido.mw
+++ b/Campoformido.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Campoformido''' éte 'nu comune [[Italie|tagliáne]] de 7.458 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
