--- a/Carlino.mw
+++ b/Carlino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Carlino''' éte 'nu comune [[Italie|tagliáne]] de 2.795 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
