--- a/Castions_di_Strada.mw
+++ b/Castions_di_Strada.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castions di Strada''' éte 'nu comune [[Italie|tagliáne]] de 3.725 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
