--- a/Cervignano_del_Friuli.mw
+++ b/Cervignano_del_Friuli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cervignano del Friuli''' éte 'nu comune [[Italie|tagliáne]] de 13.005 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
