--- a/Nome_tarandine.mw
+++ b/Nome_tarandine.mw
@@ -115,7 +115,7 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Fumíje {{IPA|[Fumíjə]}} - Eufemia
 
 === J ===
-*Jannòdde {{IPA|Jannòddə}} - Annina (anche Giovannina)
+*Jannòdde {{IPA|[Jannòddə]}} - Annina (anche Giovannina)
 
 === L ===
 Lesabbètte {{IPA|Ləsabbèttə}} - Elisabetta
