--- a/Nome_tarandine.mw
+++ b/Nome_tarandine.mw
@@ -118,7 +118,7 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Jannòdde {{IPA|[Jannòddə]}} - Annina (anche Giovannina)
 
 === L ===
-Lesabbètte {{IPA|Ləsabbèttə}} - Elisabetta
+Lesabbètte {{IPA|[Ləsabbèttə]}} - Elisabetta
 
 === M ===
 *Marije - Maria
