--- a/Chiusaforte.mw
+++ b/Chiusaforte.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Chiusaforte''' éte 'nu comune [[Italie|tagliáne]] de 781 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
