--- a/Cividale_del_Friuli.mw
+++ b/Cividale_del_Friuli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cividale del Friuli''' éte 'nu comune [[Italie|tagliáne]] de 11.500 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
