--- a/Codroipo.mw
+++ b/Codroipo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Codroipo''' éte 'nu comune [[Italie|tagliáne]] de 14.976 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
