--- a/Comeglians.mw
+++ b/Comeglians.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Comeglians''' éte 'nu comune [[Italie|tagliáne]] de 611 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
