--- a/Corno_di_Rosazzo.mw
+++ b/Corno_di_Rosazzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Corno di Rosazzo''' éte 'nu comune [[Italie|tagliáne]] de 3.306 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
