--- a/Coseano.mw
+++ b/Coseano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Coseano''' éte 'nu comune [[Italie|tagliáne]] de 2.214 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
