--- a/Fagagna.mw
+++ b/Fagagna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Fagagna''' éte 'nu comune [[Italie|tagliáne]] de 6.246 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
