--- a/Forni_Avoltri.mw
+++ b/Forni_Avoltri.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Forni Avoltri''' éte 'nu comune [[Italie|tagliáne]] de 681 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
