--- a/Forni_di_Sopra.mw
+++ b/Forni_di_Sopra.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Forni di Sopra''' éte 'nu comune [[Italie|tagliáne]] de 1.087 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
