--- a/Gemona_del_Friuli.mw
+++ b/Gemona_del_Friuli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gemona del Friuli''' éte 'nu comune [[Italie|tagliáne]] de 11.104 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
