--- a/Grimacco.mw
+++ b/Grimacco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Grimacco''' éte 'nu comune [[Italie|tagliáne]] de 443 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
