--- a/Latisana.mw
+++ b/Latisana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Latisana''' éte 'nu comune [[Italie|tagliáne]] de 13.037 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
