--- a/Lauco.mw
+++ b/Lauco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lauco''' éte 'nu comune [[Italie|tagliáne]] de 836 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
