--- a/Lestizza.mw
+++ b/Lestizza.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lestizza''' éte 'nu comune [[Italie|tagliáne]] de 3.890 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
