--- a/Lignano_Sabbiadoro.mw
+++ b/Lignano_Sabbiadoro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lignano Sabbiadoro''' éte 'nu comune [[Italie|tagliáne]] de 6.789 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
