--- a/Magnano_in_Riviera.mw
+++ b/Magnano_in_Riviera.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Magnano in Riviera''' éte 'nu comune [[Italie|tagliáne]] de 2.323 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
