--- a/Majano.mw
+++ b/Majano.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Majano''' éte 'nu comune [[Italie|tagliáne]] de 6.015 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
 
 [[ca:Majano]]
 [[en:Majano]]
