--- a/Malborghetto_Valbruna.mw
+++ b/Malborghetto_Valbruna.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Malborghetto Valbruna''' éte 'nu comune [[Italie|tagliáne]] de 1.032 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
 
 [[ca:Malborghetto Valbruna]]
 [[de:Malborghetto Valbruna]]
