--- a/Marano_Lagunare.mw
+++ b/Marano_Lagunare.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Marano Lagunare''' éte 'nu comune [[Italie|tagliáne]] de 2.007 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
 
 [[ca:Marano Lagunare]]
 [[de:Marano Lagunare]]
