*Empty MediaWiki Message*

--- a/Martignacco.mw
+++ b/Martignacco.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Martignacco''' éte 'nu comune [[Italie|tagliáne]] de 5.688 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
 
 [[ca:Martignacco]]
 [[en:Martignacco]]
