*Empty MediaWiki Message*

--- a/Mereto_di_Tomba.mw
+++ b/Mereto_di_Tomba.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mereto di Tomba''' éte 'nu comune [[Italie|tagliáne]] de 2.717 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
 
 [[ca:Mereto di Tomba]]
 [[en:Mereto di Tomba]]
