--- a/Montenars.mw
+++ b/Montenars.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montenars''' éte 'nu comune [[Italie|tagliáne]] de 564 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
