--- a/Livio_Andronico.mw
+++ b/Livio_Andronico.mw
@@ -34,7 +34,10 @@ Cumme ere abbitudine pe chidde ca avenèvene azzeccate duranne 'a uerre, Androni
 Apprisse ca avère addevenute [[liberto]], probabbilmende pe le meriti sue de precettore, <ref  name="Svetonio_1" /> tenìe 'u nome greche sue cumme ''[[convenzione de le nome romane#Cognomen|cognomen]]'' e se pigghiò 'u ''[[convenzione de le nome romane#Nomen|nomen]]'' de l'ex padrone sue, Livio. Jidde ere canoscetore d'u [[lènghe greche andiche|greche]] e d'a [[letteratura greche]], ca avère 'mbarate in patria, jidde vulìe 'ndrodurre 'u patrimonije culturale de l'[[Grecie|Ellade]] a Rome: facìe 'nfatte de le vere e proprie trascriziune de opere greche jndr'à [[lènga latina]], ca avere 'mbarate apprisse l'arrive jndr'à stessa Rome, e pe 'nu sbuenne de anne, facìe, cumme cchiù nnande fece [[Quinto Ennio]] l'attività de ''grammaticus'', facenne leziune de latine e greche a le giuvane de le ''[[gens|gentes]]'' patrizie ccu le turnise.<ref name="Svetonio_1">Svetonio, ''De grammaticis'', 1.</ref> Chidde ca facevene parte de le classe cchiù ierte accumenzavane, 'nfatte, a capì le numerose e conziderevole vandagge ca 'a canoscenze d'u greche avesse date a Rome e, allore avenìe favorite l'attività jndr'à l' ''Urbe'' de maistre de lènghe e cultura greche.<ref  name="Beare_34" />
 
 Jndr'à 'u [[240 n.C.]] a Andronico avenìe affidate, probbabbilmende da le [[edile, storie romane|edile curule]],<ref name="Pontiggia_81">Pontiggia; Grandi, p. 81.</ref> l'ingariche de comporre 'n'opera tiatrale ca fu rappresendatae jndr'à l'occasiona de le ''[[ludi|ludi scaenici]]'' ca se facerene quanne Rome scè vingìe condre a [[Cartagine]] jndr'à [[prima uerra punica]];<ref name="Livio">Tito Livio, ''Ab Urbe condita libri'', VII, 2, 8-9.</ref> resulte assaije probabbile ca s'avère trattate de 'n'opera tradotte da 'n'origginale [[letterature greche|greche]], ma non g'è possibbile capì ce ere 'na [[tragedia greche|tragedia]] o 'na [[Commedia Nova|commedia]].<ref name="Gellio_42">Gellio, ''Notti attiche'', XVII, 21, 42.</ref><ref  name="Beare_34" /><ref  name="Brutus_72" /><ref name="Tusculanae_3">Cicerone, ''Tusculanae disputationes'', I, 3.</ref> Cchiù nnande, jndr'à 'u timbe, Andronico condinuò a avè 'nu belle successe, scrivenne dramme tiatrale, addò, cumme addevenìe grazie a l'esembie ca jidde stesse desse, cumme avere addevendate pratiche pe le autore condemboranee, <ref  name="Beare_35" /> facìè pure l'attore:<ref  name="Livio" />
-{{quote|Livio Andronico fu attore dei propri drammi; si dice che una volta, quando, richiamato più volte in scena, era rimasto senza voce, chiesto il permesso, stabilì di far cantare davanti al flautista in sua vece un ragazzo,<ref>Il termine latino ''puer'' poteva avere tanto il significato di "ragazzo" quanto quello di "schiavo" (Beare, p. 35).</ref> mentre lui eseguì la monodia con una gestualità notevolmente più espressiva, poiché non era impedito dall'uso della voce.|[[Tito Livio]], ''[[Ab Urbe condita libri]]'', VII, 2, 8-9.|''Liuius, [...] suorum carminum actor, dicitur, cum saepius reuocatus uocem obtudisset, uenia petita puerum ad canendum ante tibicinem cum statuisset, canticum egisse aliquanto magis uigente motu quia nihil uocis usus impediebat.''|lingua=la}}
+
+{{quote|Livio Andronico ha state attore de le proprie dramme; se dice ca 'na vote, quanne, richiamate cchiù vote jndr'à scene, avère remaste senza vôsce, e chiedenne 'nu permesse, stabbelìe de fà candà nnande a 'u flautiste 'nu uagnone, <ref>'u termine latine ''puer'' puteve avè tande 'u significate de "uagnone" tande quidde de "schive" (Beare, p. 35).</ref> Quanne ca jidde facìe 'a monodia cu ìna gestualità assaije cchiù espressive, purcè non g'ere imbedite da l'use d'a vôsce.|Livio Andronico fu attore dei propri drammi; si dice che una volta, quando, richiamato più volte in scena, era rimasto senza voce, chiesto il permesso, stabilì di far cantare davanti al flautista in sua vece un ragazzo,<ref>Il termine latino ''puer'' poteva avere tanto il significato di "ragazzo" quanto quello di "schiavo" (Beare, p. 35).</ref> mentre lui eseguì la monodia con una gestualità notevolmente più espressiva, poiché non era impedito dall'uso della voce.|lingua=it}}
+
+{{quote|Livio Andronico ha state attore de le proprie dramme; se dice ca 'na vote, quanne, richiamate cchiù vote jndr'à scene, avère remaste senza vôsce, e chiedenne 'nu permesse, stabbelìe de fà candà nnande a 'u flautiste 'nu uagnone, <ref>'u termine latine ''puer'' puteve avè tande 'u significate de "uagnone" tande quidde de "schive" (Beare, p. 35).</ref> Quanne ca jidde facìe 'a monodia cu ìna gestualità assaije cchiù espressive, purcè non g'ere imbedite da l'use d'a vôsce.|[[Tito Livio]], ''[[Ab Urbe condita libri]]'', VII, 2, 8-9.|''Liuius, [...] suorum carminum actor, dicitur, cum saepius reuocatus uocem obtudisset, uenia petita puerum ad canendum ante tibicinem cum statuisset, canticum egisse aliquanto magis uigente motu quia nihil uocis usus impediebat.''|lingua=la}}
 
 Nel [[207 a.C.]], durante la [[seconda guerra punica]], per allontanare la minaccia del [[cartagine]]se [[Asdrubale]] che marciava vero il sud d'[[Italia]] in soccorso del fratello [[Annibale]] e guadagnare l'aiuto divino con cui sconfiggere i nemici, i ''[[pontefice (storia romana)|pontifices]]'' ed il [[senato romano]] incaricarono Andronico, che aveva acquisito una grande fama, di scrivere un ''[[carme (poesia)|carmen]]'' propiziatorio per [[Giunone]], l'inno a ''Iuno Regina''. Alla luce dell'occasione per cui il testo fu composto, è probabile che si trattasse di una "preghiera a carattere formulare e rituale, di significato prettamente religioso, nella forma di un [[partenio (poesia)|partenio]] greco";<ref  name="Pontiggia_62" /> del testo non rimane alcun frammento. Nel descrivere la cerimonia d'espiazione in onore di Giunone, lo storico [[Tito Livio]] si sofferma a parlare dell'Inno:
 {{quote|Dal tempio di Apollo due mucche bianche furono condotte in città attraverso la porta Carmentale; dietro di esse venivano portate due statue di Giunone Regina, di legno di cipresso; poi le ventisette vergini indossanti una lunga veste, procedevano cantando l'inno a Giunone Regina, certamente in quel tempo bello per intellettuali poco affinati, adesso incredibile e rozzo se fosse qui riprodotto; i decemviri coronati d'alloro e con indosso la pretesta seguivano la processione delle vergini. Dalla porta arrivarono nel Foro per il vico Iugario. Nel Foro il corteo si fermò e le fanciulle, tenendo per le mani una corda, sfilarono modulando il ritmo del canto col battito dei piedi. Poi si continuò per il vito Tusco e il Velabro, attraverso il Foro Boario fino alla salita Publicia e al tempio di Giunone Regina. Ivi le due vittime furono sacrificate dai decemviri e le statue in legno di cipresso furono trasportate nel tempio.|[[Tito Livio]], ''[[Ab Urbe condita libri]]'', XXVII, 37, 11-15; trad. di L. Fiore, UTET, Torino 1981.|lingua=la|''Ab aede Apollinis boues feminae albae duae porta Carmentali in urbem ductae; post eas duo signa cupressea Iunonis reginae portabantur; tum septem et uiginti uirgines, longam indutae uestem, carmen in Iunonem reginam canentes ibant, illa tempestate forsitan laudabile rudibus ingeniis, nunc abhorrens et inconditum si referatur; uirginum ordinem sequebantur decemuiri coronati laurea praetextatique. A porta Iugario uico in forum uenere; in foro pompa constitit et per manus reste data uirgines sonum uocis pulsu pedum modulantes incesserunt. Inde uico Tusco Uelabroque per bouarium forum in cliuum Publicium atque aedem Iunonis reginae perrectum. Ibi duae hostiae ab decemuiris immolatae et simulacra cupressea in aedem inlata.''}}
