--- a/Livio_Andronico.mw
+++ b/Livio_Andronico.mw
@@ -35,7 +35,7 @@ Apprisse ca avère addevenute [[liberto]], probabbilmende pe le meriti sue de pr
 
 Jndr'à 'u [[240 n.C.]] a Andronico avenìe affidate, probbabbilmende da le [[edile, storie romane|edile curule]],<ref name="Pontiggia_81">Pontiggia; Grandi, p. 81.</ref> l'ingariche de comporre 'n'opera tiatrale ca fu rappresendatae jndr'à l'occasiona de le ''[[ludi|ludi scaenici]]'' ca se facerene quanne Rome scè vingìe condre a [[Cartagine]] jndr'à [[prima uerra punica]];<ref name="Livio">Tito Livio, ''Ab Urbe condita libri'', VII, 2, 8-9.</ref> resulte assaije probabbile ca s'avère trattate de 'n'opera tradotte da 'n'origginale [[letterature greche|greche]], ma non g'è possibbile capì ce ere 'na [[tragedia greche|tragedia]] o 'na [[Commedia Nova|commedia]].<ref name="Gellio_42">Gellio, ''Notti attiche'', XVII, 21, 42.</ref><ref  name="Beare_34" /><ref  name="Brutus_72" /><ref name="Tusculanae_3">Cicerone, ''Tusculanae disputationes'', I, 3.</ref> Cchiù nnande, jndr'à 'u timbe, Andronico condinuò a avè 'nu belle successe, scrivenne dramme tiatrale, addò, cumme addevenìe grazie a l'esembie ca jidde stesse desse, cumme avere addevendate pratiche pe le autore condemboranee, <ref  name="Beare_35" /> facìè pure l'attore:<ref  name="Livio" />
 
-{{quote|Livio Andronico ha state attore de le proprie dramme; se dice ca 'na vote, quanne, richiamate cchiù vote jndr'à scene, avère remaste senza vôsce, e chiedenne 'nu permesse, stabbelìe de fà candà nnande a 'u flautiste 'nu uagnone, <ref>'u termine latine ''puer'' puteve avè tande 'u significate de "uagnone" tande quidde de "schive" (Beare, p. 35).</ref> Quanne ca jidde facìe 'a monodia cu ìna gestualità assaije cchiù espressive, purcè non g'ere imbedite da l'use d'a vôsce.|Livio Andronico fu attore dei propri drammi; si dice che una volta, quando, richiamato più volte in scena, era rimasto senza voce, chiesto il permesso, stabilì di far cantare davanti al flautista in sua vece un ragazzo,<ref>Il termine latino ''puer'' poteva avere tanto il significato di "ragazzo" quanto quello di "schiavo" (Beare, p. 35).</ref> mentre lui eseguì la monodia con una gestualità notevolmente più espressiva, poiché non era impedito dall'uso della voce.|lingua=it}}
+{{quote|Livio Andronico ha state attore de le proprie dramme; se dice ca 'na vote, quanne, richiamate cchiù vote jndr'à scene, avère remaste senza vôsce, e chiedenne 'nu permesse, stabbelìe de fà candà nnande a 'u flautiste 'nu uagnone, <ref>'u termine latine ''puer'' puteve avè tande 'u significate de "uagnone" tande quidde de "schive" (Beare, p. 35).</ref> Quanne ca jidde facìe 'a monodia cu ìna gestualità assaije cchiù espressive, purcè non g'ere imbedite da l'use d'a vôsce.|[[Tito Livio]], ''[[Ab Urbe condita libri]]'', VII, 2, 8-9.|Livio Andronico fu attore dei propri drammi; si dice che una volta, quando, richiamato più volte in scena, era rimasto senza voce, chiesto il permesso, stabilì di far cantare davanti al flautista in sua vece un ragazzo,<ref>Il termine latino ''puer'' poteva avere tanto il significato di "ragazzo" quanto quello di "schiavo" (Beare, p. 35).</ref> mentre lui eseguì la monodia con una gestualità notevolmente più espressiva, poiché non era impedito dall'uso della voce.|lingua=it}}
 
 {{quote|Livio Andronico ha state attore de le proprie dramme; se dice ca 'na vote, quanne, richiamate cchiù vote jndr'à scene, avère remaste senza vôsce, e chiedenne 'nu permesse, stabbelìe de fà candà nnande a 'u flautiste 'nu uagnone, <ref>'u termine latine ''puer'' puteve avè tande 'u significate de "uagnone" tande quidde de "schive" (Beare, p. 35).</ref> Quanne ca jidde facìe 'a monodia cu ìna gestualità assaije cchiù espressive, purcè non g'ere imbedite da l'use d'a vôsce.|[[Tito Livio]], ''[[Ab Urbe condita libri]]'', VII, 2, 8-9.|''Liuius, [...] suorum carminum actor, dicitur, cum saepius reuocatus uocem obtudisset, uenia petita puerum ad canendum ante tibicinem cum statuisset, canticum egisse aliquanto magis uigente motu quia nihil uocis usus impediebat.''|lingua=la}}
 
