--- a/Livio_Andronico.mw
+++ b/Livio_Andronico.mw
@@ -39,7 +39,9 @@ Jndr'à 'u [[240 n.C.]] a Andronico avenìe affidate, probbabbilmende da le [[ed
 
 {{quote|Livio Andronico ha state attore de le proprie dramme; se dice ca 'na vote, quanne, richiamate cchiù vote jndr'à scene, avère remaste senza vôsce, e chiedenne 'nu permesse, stabbelìe de fà candà nnande a 'u flautiste 'nu uagnone, <ref>'u termine latine ''puer'' puteve avè tande 'u significate de "uagnone" tande quidde de "schive" (Beare, p. 35).</ref> Quanne ca jidde facìe 'a monodia cu ìna gestualità assaije cchiù espressive, purcè non g'ere imbedite da l'use d'a vôsce.|[[Tito Livio]], ''[[Ab Urbe condita libri]]'', VII, 2, 8-9.|''Liuius, [...] suorum carminum actor, dicitur, cum saepius reuocatus uocem obtudisset, uenia petita puerum ad canendum ante tibicinem cum statuisset, canticum egisse aliquanto magis uigente motu quia nihil uocis usus impediebat.''|lingua=la}}
 
-Nel [[207 a.C.]], durante la [[seconda guerra punica]], per allontanare la minaccia del [[cartagine]]se [[Asdrubale]] che marciava vero il sud d'[[Italia]] in soccorso del fratello [[Annibale]] e guadagnare l'aiuto divino con cui sconfiggere i nemici, i ''[[pontefice (storia romana)|pontifices]]'' ed il [[senato romano]] incaricarono Andronico, che aveva acquisito una grande fama, di scrivere un ''[[carme (poesia)|carmen]]'' propiziatorio per [[Giunone]], l'inno a ''Iuno Regina''. Alla luce dell'occasione per cui il testo fu composto, è probabile che si trattasse di una "preghiera a carattere formulare e rituale, di significato prettamente religioso, nella forma di un [[partenio (poesia)|partenio]] greco";<ref  name="Pontiggia_62" /> del testo non rimane alcun frammento. Nel descrivere la cerimonia d'espiazione in onore di Giunone, lo storico [[Tito Livio]] si sofferma a parlare dell'Inno:
+Jndr'à 'u [[207 n.C.]], duranne 'a [[seconda uerra punica]], pe allundanà 'a minacce d'u cartagginese [[Asdrubale]] ca camminave verse 'u sud de l'[[Itaglie]] pe scè aiutà 'u frate [[Annibale]] e guadagnà l'aijute divine pe supranà le nemice, le 
+''[[pontefice, storia romane|pontifices]]'' e 'u [[senato romane]] ingaricarene Andronico, ca avère conguistate 'na fama granne granne, de scrivere 'nu ''[[carme, poesie|carmen]]'' propiziatorie pe [[Giunone]], l'inne a ''Iuno Regina''. A 'a luce d'u mutive ca 'u teste avère state scritte, jè probabbile ca se trattasse de 'na "preghiera a carattere formulare e rituale, de significate prettamende religgiose, jndr'à forme de 'nu [[partenio, poesie|partenie]] greche";<ref  name="Pontiggia_62" /> d'u teste non ge remane nisciune stuèzze. Quanne se descrivìe 'a cerimonie d'espiazione in onore de Giunone, 'u storiche [[Tito Livio]] se chiande a parlà de l'Inno:
+
 {{quote|Dal tempio di Apollo due mucche bianche furono condotte in città attraverso la porta Carmentale; dietro di esse venivano portate due statue di Giunone Regina, di legno di cipresso; poi le ventisette vergini indossanti una lunga veste, procedevano cantando l'inno a Giunone Regina, certamente in quel tempo bello per intellettuali poco affinati, adesso incredibile e rozzo se fosse qui riprodotto; i decemviri coronati d'alloro e con indosso la pretesta seguivano la processione delle vergini. Dalla porta arrivarono nel Foro per il vico Iugario. Nel Foro il corteo si fermò e le fanciulle, tenendo per le mani una corda, sfilarono modulando il ritmo del canto col battito dei piedi. Poi si continuò per il vito Tusco e il Velabro, attraverso il Foro Boario fino alla salita Publicia e al tempio di Giunone Regina. Ivi le due vittime furono sacrificate dai decemviri e le statue in legno di cipresso furono trasportate nel tempio.|[[Tito Livio]], ''[[Ab Urbe condita libri]]'', XXVII, 37, 11-15; trad. di L. Fiore, UTET, Torino 1981.|lingua=la|''Ab aede Apollinis boues feminae albae duae porta Carmentali in urbem ductae; post eas duo signa cupressea Iunonis reginae portabantur; tum septem et uiginti uirgines, longam indutae uestem, carmen in Iunonem reginam canentes ibant, illa tempestate forsitan laudabile rudibus ingeniis, nunc abhorrens et inconditum si referatur; uirginum ordinem sequebantur decemuiri coronati laurea praetextatique. A porta Iugario uico in forum uenere; in foro pompa constitit et per manus reste data uirgines sonum uocis pulsu pedum modulantes incesserunt. Inde uico Tusco Uelabroque per bouarium forum in cliuum Publicium atque aedem Iunonis reginae perrectum. Ibi duae hostiae ab decemuiris immolatae et simulacra cupressea in aedem inlata.''}}
 
 È tuttavia significativo notare come l'inno fu scritto dietro commissione statale, e non fu dunque una spontanea espressione dell'arte del poeta: la realizzazione della preghiera fu affidata a Livio per via della fama di cui egli godeva, ma anche per i rapporti che lo legavano al [[console (storia romana)|console]] [[Marco Livio Salinatore]], che era incaricato di affrontare l'esercito cartaginese di Asdrubale.<ref  name="Pontiggia_62" /> L'esercito romano si scontrò dunque con quello nemico in una sanguinosa [[battaglia del Metauro|battaglia]] presso il fiume [[Metauro]], dove i [[legionario romano|legionari romani]] ottennero la vittoria infliggendo ingenti perdite ai nemici e distruggendone l'intero corpo di spedizione.
