--- a/Nome_tarandine.mw
+++ b/Nome_tarandine.mw
@@ -24,6 +24,8 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Benedìtte {{IPA|[Bənədìttə]}} - Benedetto
 
 === C ===
+*Caitáne {{IPA|[Caitánə]}} - Gaetano
+*Caitánine {{IPA|[Caitáninə]}} - Gaetanino
 *Camìlle {{IPA|[Camìllə]}} - Camillo
 *Carméle {{IPA|[Carmélə]}} - Carmelo
 *Carméline {{IPA|[Carmélinə]}} - Carmelino
@@ -33,7 +35,10 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Catàvete {{IPA|[Catàvətə]}} - Cataldo
 *Ceccìlle {{IPA|[Cəccìllə]}} - Ciccillo (vezzeggiativo di Francesco)
 *Cellùzze {{IPA|[Cəllùzzə]}} - dim. di Francesco
+*Celòrme {{IPA|[Celòrme]}} - Girolamo
 *Cìcce {{IPA|[Cìccə]}} - Ciccio (dim. di Francesco)
+*Cìnde {{IPA|[Cìndə]}} - Giacinto (diminutivo)
+*Ciòmme {{IPA|[Ciòmmə]}} - Girolamo (diminutivo)
 *Cusemíne {{IPA|[Cusəmínə]}} - Cosimino
 
 === D ===
@@ -50,18 +55,36 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Frangìsche {{IPA|[Franghìschə]}} - Francesco
 
 === G ===
-*Gesèppe - Giuseppe
+*Gesè {{IPA|[Gəsè]}} - Giusè
+*Gesèppe {{IPA|[Gəsèppə]}} - Giuseppe
+*Geuà {{IPA|[Gəuà]}} - Giovà (apocopata di Giovanni)
+*Geuànne {{IPA|[Gəuànne]}} - Giovanni
+*Giacchíne {{IPA|[Giacchìnə]}} - Gioacchino
+*Giàcheme {{IPA|[Giàchemə]}} - Giacomo
+*Giacìnde {{IPA|[Giacìndə]}} - Giacinto
+*Giacumíne {{IPA|[Giacumínə]}} - Giacomino
 
 === J ===
 *Jangele {{IPA|[I:angələ]}} - Angelo
+*Jennáre {{IPA|[Gənnárə]}} - Gennaro
 
 === M ===
 *Manuè {{IPA|[Manuè]}} - Emanuele
 *Memíne {{IPA|[Məmínə]}} - Cosimino
 *Mengùcce {{IPA|[Məngùccə]}} - Domenicuccio (dim. di Domenico)
 
+=== P ===
+*Pèppe {{IPA|[Pèppə]}} - Peppe
+
+=== S ===
+*Sciànne {{IPA|[Sciànnə]}} - Gianni
+
 === T ===
 *Taddíne {{IPA|[Taddínə]}} - Cataldino
+*Taníne {{IPA|[Tanínə]}} - Gaetanino
+
+=== U ===
+*Uelíne {{IPA|[Uelínə]}} - Giosuè
 
 == Nome de femmene ==
 
@@ -129,8 +152,13 @@ Lesabbètte {{IPA|[Ləsabbèttə]}} - Elisabetta
 === N ===
 *'Nunziàte {{IPA|['Nunziàtə]}} - Annunziata
 *'Nunziatíne {{IPA|['Nunziatínə]}} - Nunziatina (dim. di Annunziata)
+*Nannèlle {{IPA|[Nannèllə]}} - Gaetana (anche Gaetanella)
+*Nanníne {{IPA|[Nannínə]}} - Giovannina
 *Nuzziáte {{IPA|[Nuzziátə]}} - Annunziata
 *Ninètte {{IPA|[Ninèttə]}} - Antonietta
+
+=== S ===
+*Sabbèdde {{IPA|[Sabbèddə]}} - Isabella (diminutivo)
 
 {{Nomi nelle culture del mondo}}
 
