--- a/Nome_tarandine.mw
+++ b/Nome_tarandine.mw
@@ -1,8 +1,6 @@
 {{S}}
 Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Tarde]].
 
-*STA PAGENE JE' IN AGGIORNAMENDE (QUESTA PAGINA E' IN AGGIORNAMENTO)
-
 'Mbrà le parendese quadre se legge 'u nome seconne a diziona [[IPA]].
 
 == Nome de maschele ==
@@ -159,6 +157,10 @@ Lesabbètte {{IPA|[Ləsabbèttə]}} - Elisabetta
 
 === S ===
 *Sabbèdde {{IPA|[Sabbèddə]}} - Isabella (diminutivo)
+
+== Bibliografije ==
+{{Bibliografia|Gigante, 2002|
+Nicola Gigante, ''Dizionario della parlata tarantina. Storico critico etimologico'', Mandese Editore, Taranto, 2002}}
 
 {{Nomi nelle culture del mondo}}
 
