--- a/Nome_tarandine.mw
+++ b/Nome_tarandine.mw
@@ -160,7 +160,7 @@ Lesabbètte {{IPA|[Ləsabbèttə]}} - Elisabetta
 
 == Bibliografije ==
 {{Bibliografia|Gigante, 2002|
-Nicola Gigante, ''Dizionario della parlata tarantina. Storico critico etimologico'', Mandese Editore, Taranto, 2002}}
+Necole Gigante, ''Dizionario della parlata tarantina. Storico critico etimologico'', Mandese Editore, Tarde, 2002}}
 
 {{Nomi nelle culture del mondo}}
 
