--- a/Muzzana_del_Turgnano.mw
+++ b/Muzzana_del_Turgnano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Muzzana del Turgnano''' éte 'nu comune [[Italie|tagliáne]] de 2.662 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
