--- a/Nimis.mw
+++ b/Nimis.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nimis''' éte 'nu comune [[Italie|tagliáne]] de 2.817 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
