--- a/Osoppo.mw
+++ b/Osoppo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Osoppo''' éte 'nu comune [[Italie|tagliáne]] de 2.989 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
