--- a/Pasian_di_Prato.mw
+++ b/Pasian_di_Prato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pasian di Prato''' éte 'nu comune [[Italie|tagliáne]] de 8.945 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
