--- a/Pavia_di_Udine.mw
+++ b/Pavia_di_Udine.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pavia di Udine''' éte 'nu comune [[Italie|tagliáne]] de 5.634 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
