--- a/Pocenia.mw
+++ b/Pocenia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pocenia''' éte 'nu comune [[Italie|tagliáne]] de 2.555 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
