--- a/Povoletto.mw
+++ b/Povoletto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Povoletto''' éte 'nu comune [[Italie|tagliáne]] de 5.480 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
