--- a/Premariacco.mw
+++ b/Premariacco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Premariacco''' éte 'nu comune [[Italie|tagliáne]] de 4.069 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
