--- a/Reana_del_Rojale.mw
+++ b/Reana_del_Rojale.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Reana del Rojale''' éte 'nu comune [[Italie|tagliáne]] de 4.724 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
