--- a/Remanzacco.mw
+++ b/Remanzacco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Remanzacco''' éte 'nu comune [[Italie|tagliáne]] de 5.774 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
