--- a/Resia.mw
+++ b/Resia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Resia''' éte 'nu comune [[Italie|tagliáne]] de 1.224 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
