--- a/Resiutta.mw
+++ b/Resiutta.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Resiutta''' éte 'nu comune [[Italie|tagliáne]] de 320 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
