--- a/Rigolato.mw
+++ b/Rigolato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rigolato''' éte 'nu comune [[Italie|tagliáne]] de 585 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
