--- a/Rive_d'Arcano.mw
+++ b/Rive_d'Arcano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rive d'Arcano''' éte 'nu comune [[Italie|tagliáne]] de 2.284 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
