--- a/Ronchis.mw
+++ b/Ronchis.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ronchis''' éte 'nu comune [[Italie|tagliáne]] de 2.022 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
