--- a/Ruda.mw
+++ b/Ruda.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ruda''' éte 'nu comune [[Italie|tagliáne]] de 2.955 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
