*Empty MediaWiki Message*

--- a/San_Giorgio_di_Nogaro.mw
+++ b/San_Giorgio_di_Nogaro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Giorgio di Nogaro''' éte 'nu comune [[Italie|tagliáne]] de 7.312 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
