*Empty MediaWiki Message*

--- a/San_Leonardo_(UD).mw
+++ b/San_Leonardo_(UD).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''San Leonardo (UD)''' éte 'nu comune [[Italie|tagliáne]] de 1.165 crestiáne.
-[[Category:Gëografije]]
+'''San Leonardo''' éte 'nu comune [[Italie|tagliáne]] de 1.165 crestiáne.
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
