--- a/San_Vito_al_Torre.mw
+++ b/San_Vito_al_Torre.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Vito al Torre''' éte 'nu comune [[Italie|tagliáne]] de 1.376 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
