--- a/San_Vito_di_Fagagna.mw
+++ b/San_Vito_di_Fagagna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Vito di Fagagna''' éte 'nu comune [[Italie|tagliáne]] de 1.621 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
