--- a/Sauris.mw
+++ b/Sauris.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sauris''' éte 'nu comune [[Italie|tagliáne]] de 418 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
