--- a/Tarcento.mw
+++ b/Tarcento.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tarcento''' éte 'nu comune [[Italie|tagliáne]] de 9.029 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
