--- a/Teor.mw
+++ b/Teor.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Teor''' éte 'nu comune [[Italie|tagliáne]] de 1.996 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
