--- a/Tolmezzo.mw
+++ b/Tolmezzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tolmezzo''' éte 'nu comune [[Italie|tagliáne]] de 10.539 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
