--- a/Torviscosa.mw
+++ b/Torviscosa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Torviscosa''' éte 'nu comune [[Italie|tagliáne]] de 3.232 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
