--- a/Trivignano_Udinese.mw
+++ b/Trivignano_Udinese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Trivignano Udinese''' éte 'nu comune [[Italie|tagliáne]] de 1.703 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
